# tradingos

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  pyproject.toml
data/historical/: BTCUSDT_1h.parquet
scripts/: download_binance_data.py  run_backtest.py  run_optimization.py
src/tradingos/api/: main.py
src/tradingos/backtest/: broker_sim.py  engine.py  metrics.py  result.py
src/tradingos/core/: indicators.py  risk.py  strategy.py  types.py
src/tradingos/data/: binance_downloader.py  loader.py
src/tradingos/optimize/: grid.py  optimizer.py
src/tradingos/strategies/: __init__.py  ma_crossover.py
tests/: conftest.py  test_api.py  test_broker_sim.py  test_engine.py  test_indicators.py  test_metrics.py  test_optimize.py  test_strategy_registry.py
web/: Dockerfile  package-lock.json  package.json
web/app/: globals.css  layout.tsx  page.tsx
web/components/: DataBadge.tsx  DummyDataBadge.tsx  Sidebar.tsx  StrategyBoard.tsx  TopMetricsPanel.tsx
web/lib/: api.ts  dummy-data.ts
