[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tradingos"
version = "0.1.0"
description = "Trading OS - núcleo de research: constructor de estrategias, motor de backtesting y métricas"
requires-python = ">=3.11"
dependencies = [
    "pandas>=2.2",
    "numpy>=1.26",
    "pydantic>=2.6",
    "pyarrow>=15.0",
    "requests>=2.31",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/tradingos"]
